--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "author": "Jesper Orb",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.1",
-    "dotenv": "^4.0.0",
-    "express": "^4.15.2",
-    "request": "^2.81.0"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
